--- a/Language_Detection.ipynb
+++ b/Language_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYHx52Ke2S4urnV4fD2R94"
+      "authorship_tag": "ABX9TyMC7tKkhRkNXHBmoUyfHSOv"
     },
     "kernelspec": {
       "name": "python3",
@@ -3560,7 +3560,7 @@
     {
       "cell_type": "code",
       "source": [
-        "text=\"schön, dich kennenzulernen\"\n",
+        "text=\"schön dich kennenzulernen\"\n",
         "sequence=tokenizer.texts_to_sequences([text])[0]\n",
         "pad=pad_sequences([sequence],maxlen=251,padding='pre')\n",
         "pred=model.predict(pad)\n",
@@ -3574,15 +3574,15 @@
           "height": 70
         },
         "id": "c7mgE_O7yGS2",
-        "outputId": "fbc9b683-a1ba-4db7-b683-5fede71ac405"
+        "outputId": "17e43fb4-3c31-49d7-86c9-539960786bfc"
       },
-      "execution_count": 100,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 91ms/step\n",
+            "1/1 [==============================] - 0s 53ms/step\n",
             "[[5.2113810e-06 2.5751194e-07 9.9998617e-01 8.3200302e-06]]\n"
           ]
         },
@@ -3597,7 +3597,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 101
         }
       ]
     },
