--- a/Language_Detection.ipynb
+++ b/Language_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMC7tKkhRkNXHBmoUyfHSOv"
+      "authorship_tag": "ABX9TyNVCVQM2zmuNFx4AiGitLl/"
     },
     "kernelspec": {
       "name": "python3",
@@ -3239,6 +3239,18 @@
           "execution_count": 82
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We got -\n",
+        "* Training data accuracy - 99.97%\n",
+        "* Validation data accuracy - 99.64%\n",
+        "* Testing data accuracy - 99.63%"
+      ],
+      "metadata": {
+        "id": "fQTU8-q62M5U"
+      }
     },
     {
       "cell_type": "markdown",
